# diagrams-cairo

./: .authorspellings  .gitignore  .travis.yml  CHANGELOG.md  CHANGES  CHANGES.markdown  LICENSE  README  README.markdown  diagrams-cairo.cabal
.github/workflows/: haskell-ci.yml
example/: Apollonius.hs  Fractal.hs  Hanoi.hs  Hasse.hs  Hilbert.hs  Logo.hs  Pentagon.hs  SolveTicTacToe.hs  Star.hs  Tensides.hs  TicTacToe.hs  TicTacToeMap.hs  Triangle.hs  beside.hs  boxes.hs  golden.hs  gray.hs  hslogo.hs  paradox.hs  path.hs  sierpinski.hs  square.hs  star.hs  tensides_polygon.hs  triangle.hs  triangular-numbers.hs
example/tic-tac-toe/: Maps.hs  Solve.hs
src/Diagrams/Backend/: Cairo.hs
src/Diagrams/Backend/Cairo/: CmdLine.hs  Gtk.hs  Internal.hs  List.hs  Ptr.hs  Text.hs
test/: Adjust.hs  AttrTest.hs  BezParam.hs  Bounds.hs  BoundsTest.hs  CatTest.hs  Clip.hs  CmdLineTest.hs  Connect.hs  EllipseBounds.hs  EllipseTest.hs  Explode.hs  FillRule.hs  FreezeTest.hs  Image.hs  ImageSize.hs  InfTrailTest.hs  Inside.hs  Inside2.hs  Issue32.hs  JpgTest.hs  NegStrut.hs  Opacity.hs  PathTest.hs  Reflect.hs  RoundedRect.hs  SetBounds.hs  Shear.hs  ShowNames.hs  StrutTest.hs  Test.hs  Text.hs  Text2.hs  Visible.hs  beside.hs  clean.sh  context-stack-overflow.hs  path_bounds_bug.hs  path_resize.hs
