Name:                diagrams-cairo
Version:             0.6
Synopsis:            Cairo backend for diagrams drawing EDSL
Description:         A full-featured backend for rendering
                     diagrams using the cairo rendering engine.
                     .
                     * "Diagrams.Backend.Cairo.CmdLine" - if you're
                       just getting started with diagrams, begin here.
                     .
                     * "Diagrams.Backend.Cairo" - look at this next.
                       The general API for the cairo backend.
                     .
                     * "Diagrams.Backend.Cairo.Internal" - the
                       implementation guts of the cairo backend.
                       Users should normally not need to import this
                       module.
                     .
                     * "Diagrams.Backend.Cairo.Text" - cairo-specific
                       text support, including automatic bounding
                       boxes.
Homepage:            http://projects.haskell.org/diagrams
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-cairo/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.6
Extra-source-files:  CHANGES, README
Tested-with:         GHC == 6.12.3, GHC == 7.0.4, GHC == 7.2.1, GHC == 7.4.1
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-cairo.git

Library
  Exposed-modules:     Diagrams.Backend.Cairo
                       Diagrams.Backend.Cairo.CmdLine
                       Diagrams.Backend.Cairo.Gtk
                       Diagrams.Backend.Cairo.Internal
                       Diagrams.Backend.Cairo.Text
  Hs-source-dirs:      src
  Build-depends:       base >= 4.2 && < 4.7,
                       mtl >= 2.0 && < 2.2,
                       process,
                       directory,
                       filepath,
                       old-time,
                       diagrams-core >= 0.6 && < 0.7,
                       diagrams-lib >= 0.6 && < 0.7,
                       cairo >= 0.10.1 && < 0.13,
                       cmdargs >= 0.6 && < 0.11,
                       gtk >= 0.12.0  && < 0.13.0,
                       split >= 0.1.2 && < 0.3
  if !os(windows)
    cpp-options: -DCMDLINELOOP
    Build-depends:     unix >= 2.4 && < 2.7

  if impl(ghc >= 7.2.1 && < 7.4)
    Build-depends:     cairo >= 0.12.1,
                       gtk   >= 0.12.1

  if impl(ghc >= 7.4.1)
    Build-depends:     cairo >= 0.12.3,
                       gtk   >= 0.12.3
